--- a/package.json
+++ b/package.json
@@ -1,23 +1,24 @@
 {
-  "name": "bot",
-  "type": "module",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "start": "nodemon bot.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "author": "emanuel",
-  "license": "ISC",
-  "dependencies": {
-    "axios": "^0.27.2",
-    "dotenv": "^16.0.1",
-    "google-tts-api": "^2.0.2",
-    "gtts": "^0.2.1",
-    "telegraf": "^4.8.5"
-  },
-  "devDependencies": {
-    "nodemon": "^2.0.18"
-  }
+    "name": "bot",
+    "type": "module",
+    "version": "1.0.0",
+    "description": "",
+    "main": "index.js",
+    "scripts": {
+        "dev": "nodemon bot.js",
+        "start": "node bot.js",
+        "test": "echo \"Error: no test specified\" && exit 1"
+    },
+    "author": "emanuel",
+    "license": "ISC",
+    "dependencies": {
+        "axios": "^0.27.2",
+        "dotenv": "^16.0.1",
+        "google-tts-api": "^2.0.2",
+        "gtts": "^0.2.1",
+        "telegraf": "^4.8.5"
+    },
+    "devDependencies": {
+        "nodemon": "^2.0.18"
+    }
 }
